Update README and remove some pointless comments